--- a/roombooking/Dockerfile
+++ b/roombooking/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:8-jre-alpine
-COPY target/hotel1-0.0.1.jar /hotel1-0.0.1.jar
-CMD java -jar hotel1-0.0.1.jar
+COPY target/roombooking-0.0.1.jar /roombooking-0.0.1.jar
+CMD java -jar roombooking-0.0.1.jar
