H2 database setup completed

--- a/hotel/pom.xml
+++ b/hotel/pom.xml
@@ -1,7 +1,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>lifeco-rest</groupId>
-    <artifactId>hoteld</artifactId>
+    <artifactId>hotel</artifactId>
     <version>0.0.1</version>
 
     <properties>
@@ -48,7 +48,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
