--- a/hms/src/main/resources/application.properties
+++ b/hms/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8083
-# quotation.urls=http://auldfellas:8080/quotations,http://girlsallowed:8081/quotations,http://dodgygeezers:8082/quotations
-
+# cors.allowed.origins
+# cors.allowed.headers
+# cors.allowed.methods
