--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>hms</module>
         <module>hotel</module>
         <module>client-new</module>
+        <module>admin</module>
     </modules>
 
     
