--- a/hotel/pom.xml
+++ b/hotel/pom.xml
@@ -76,6 +76,14 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.6</version>
         </dependency>
+        <!--
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>{version}</version>
+        </dependency>
+        -->
+
 
         
         <!-- https://mvnrepository.com/artifact/org.jmdns/jmdns -->
