Added another hotel + modified code to allow that

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>core</module>
         <module>hms</module>
         <module>hotel</module>
+        <module>hotel2</module>
         <module>client-new</module>
         <module>admin</module>
     </modules>
