--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,16 @@ services:
           - 8080:8080
         networks:
           - external-api
+    hotel2:
+        build: ./hotel2
+        image: docker.io/library/hotel2:latest
+        restart: always
+        volumes:
+          - ./hotel2-data:/data
+        ports:
+          - 8081:8081
+        networks:
+          - external-api
     hms:
         build: ./hms
         image: docker.io/library/hms:latest
